artifacts/microservices/node.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: node
  name: node
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: node
    spec:
      containers:
      - name: node
        image: node
        command: ["sleep"]
        args: ["100000"]
