artifacts/microservices/client.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: test-prep-app
  name: test-prep-app
spec:
  type: NodePort
  ports:
  - name: http-client
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    name: test-prep-app

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: test-prep-app
  name: test-prep-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: test-prep-app
    spec:
      containers:
      - name: test-prep-app
        image: vizzuality/test-prep-app
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        args:
          - start

        ports:
          - containerPort: 8080

      restartPolicy: Always
