artifacts/microservices/converter.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: converter
  name: converter
spec:
  ports:
    - port: 3000
  selector:
    name: converter

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: converter
  name: converter
spec:
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "true"
      labels:
        name: converter
    spec:
      containers:
      - name: converter
        image: vizzuality/converter:1.4.5
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "512Mi"
        args:
          - develop
        ports:
          - containerPort: 3000

      restartPolicy: Always
