artifacts/microservices/dataset.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: dataset
  name: dataset
spec:
  ports:
    - port: 3000
  selector:
    name: dataset

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: dataset
  name: dataset
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: dataset
    spec:
      containers:
      - name: dataset
        image: vizzuality/dataset:1.1.5
        args:
          - develop
        ports:
          - containerPort: 3000

      restartPolicy: Always
