artifacts/microservices/loadtest-python-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadtestpython-lb
  labels:
    name: loadtestpython
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5700
  selector:
    name: loadtestpython
