artifacts/microservices/loadtest-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadtest-lb
  labels:
    name: loadtest
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    name: loadtest
