artifacts/microservices/poly-cby-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: poly-cby-lb
  labels:
    name: poly-intersect-cby
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5700
  selector:
    name: poly-intersect-cby
