artifacts/microservices/poly-d-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: poly-d-lb
  labels:
    name: poly-intersect-d
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5700
  selector:
    name: poly-intersect-d
