artifacts/microservices/client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ct-static-ip
    kubernetes.io/tls-acme-challenge-endpoints: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: resourcewatch.app
    http:
      paths:
      - backend:
          serviceName: test-rw-app
          servicePort: http-client
  - host: prep.app
    http:
      paths:
      - backend:
          serviceName: test-prep-app
          servicePort: http-client
